# FullscalePrime

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  cam_assignment.bash  cam_devices.txt  dire_test.out  dire_test2.out  kill_sdr.bash  newlist.txt  processaltitude.py  rtl_fm_pid  runSDR.sh  runSDR1.sh  runSDR2.sh  sdr1.conf  sdr1.txt  sdr1_output.txt  sdr1_output1.txt  sdr1test.txt  sdr2.conf  sdr2.txt  sdr2_1mi.txt  sdr2_output.txt  test0.txt  test1.txt  test2.txt  test_dev0_1mi-2.txt  test_dev1_1mi.txt  test_dev1_2mi.txt  test_out.txt  totally_real_level.txt  video_concat_setup.py  video_concat_setup.sh
FieldTest/: CMakeLists.txt  README.md
FieldTest/src/: LevelLockTest.cpp  LevelServoTest.cpp  LiftArrowTest.cpp  LiftServoTest.cpp  NacelleLockTest.cpp  RCBArrowTest.cpp  Swivel1Test.cpp  Swivel2Test.cpp  Swivel3Test.cpp  Swivel3TestBlowup.cpp  Swivel3TestStop.cpp
HFSM/: CMakeLists.txt  README.md  writestate.py
HFSM/include/: Root.h  State.h  State_A.h  State_Apogee_Detection.h  State_B.h  State_Camera_Check.h  State_Delay.h  State_Enums.h  State_Final.h  State_Full_Level.h  State_Full_Lift.h  State_Full_RCB.h  State_Initial.h  State_Landing_Detection.h  State_Launch_Detection.h  State_Level_Servo.h  State_Lift_Motor.h  State_Lift_Servo.h  State_Nacelle_Servo.h  State_PDS_Delay.h  State_Prelaunch.h  State_RAFCO_Mission.h  State_RCB_Motor.h  State_SDR1.h  State_SDR2.h  State_Stepper1.h  State_Stepper2.h  State_Stepper3.h  State_Stepper_Test.h
HFSM/src/: Root.cpp  State.cpp  State_A.cpp  State_Apogee_Detection.cpp  State_B.cpp  State_Camera_Check.cpp  State_Delay.cpp  State_Final.cpp  State_Full_Level.cpp  State_Full_Lift.cpp  State_Full_RCB.cpp  State_Initial.cpp  State_Landing_Detection.cpp  State_Launch_Detection.cpp  State_Level_Servo.cpp  State_Lift_Motor.cpp  State_Lift_Servo.cpp  State_Nacelle_Servo.cpp  State_PDS_Delay.cpp  State_Prelaunch.cpp  State_RAFCO_Mission.cpp  State_RCB_Motor.cpp  State_SDR1.cpp  State_SDR2.cpp  State_Stepper1.cpp  State_Stepper2.cpp  State_Stepper3.cpp  State_Stepper_Test.cpp
IMU/: CMakeLists.txt  README.md
IMU/include/: IMU.hpp  config_IMU.hpp
IMU/src/: IMU.cpp  common.cpp
IMUTest/: CMakeLists.txt
ImageCapture/: CMakeLists.txt
ImageCapture/src/: basic_multi_save.py  basic_multi_video.py  basic_multi_view.py  basic_multi_view_copy.py  basic_sticher.py  camera_check_test.cpp  esp_bi_test.py  image_capture_test.cpp  thing.txt  usb_display_test.cpp  usb_gstreamer_test.cpp  usb_multithread_test.cpp  usb_save_png_test.cpp  videowriter_test.py
Log/: CMakeLists.txt  README.md
MainDriver/: CMakeLists.txt  README.md
MainDriver/src/: example.cpp  main.cpp  test.cpp
MainDriver/src/integration_tests/: display.cpp  pre_launch.cpp  real_display.cpp
MainDriver/src/unit_tests/: level_servo_test.cpp  lift_motor_test.cpp  lift_servo_test.cpp  nacelle_servo_test.cpp  rcb_motor_test.cpp  stepper1_test.cpp  stepper2_test.cpp  stepper3_test.cpp
MultithreadTest/: CMakeLists.txt
PacketReception/: CMakeLists.txt  PacketTest.cpp  README.md  SquelchTest.cpp  TCPTest.cpp
PacketReception/include/: PacketReceiver.h
PacketReception/src/: PacketReceiver.cpp
SerialCute++/: CMakeLists.txt  README.md  SerialWrite.cpp
SerialCute++/include/: SerialObject.h
SerialCute++/src/: SerialObject.cpp  SerialTest.cpp
ServoTest/: CMakeLists.txt
ServoTest/src/: servo_test.cpp
Stepper/: CMakeLists.txt  README.md
Stepper/include/: Stepper.h
Stepper/src/: Stepper.cpp  Stepper_runner.cpp
VectorNav/: CMakeLists.txt
VectorNav/include/vn/: compositedata.h  ezasyncdata.h
docs/: LevelLockTest_8cpp__incl.md5  LevelServoTest_8cpp.html  NacelleLockTest_8cpp.html  NacelleLockTest_8cpp__incl.md5  PacketReceiver_8h__incl.map  PacketReceiver_8h__incl.md5  PacketTest_8cpp__incl.map  Root_8h__dep__incl.md5  Root_8h__incl.map  SerialObject_8h.html  SerialTest_8cpp__incl.map  SerialTest_8cpp__incl.md5  State_8h.html  State_8h__dep__incl.map  State__Apogee__Detection_8h__dep__incl.map  State__Camera__Check_8h.html  State__Enums_8h.html  State__Enums_8h__dep__incl.md5  State__Full__Lift_8h__incl.md5  State__Full__RCB_8h__incl.md5  State__Landing__Detection_8h.html  State__Landing__Detection_8h__dep__incl.md5  State__Launch__Detection_8h.html  State__Launch__Detection_8h__dep__incl.map  State__Launch__Detection_8h__dep__incl.md5  State__Level__Servo_8h__dep__incl.md5  State__Lift__Motor_8h__dep__incl.map  State__Lift__Motor_8h__incl.map  State__Lift__Servo_8h__dep__incl.map  State__Lift__Servo_8h__incl.md5  State__Nacelle__Servo_8h__dep__incl.map  State__PDS__Delay_8h__incl.map  State__Prelaunch_8h__dep__incl.map  State__RCB__Motor_8h.html  State__RCB__Motor_8h__dep__incl.md5  State__RCB__Motor_8h__incl.map  State__SDR1_8h.html  State__SDR1_8h__dep__incl.map  State__SDR1_8h__dep__incl.md5  State__SDR1_8h__incl.md5  (+55 more)
docs_sphinx/: Doxyfile.in  conf.py
html/: LevelLockTest_8cpp.html  LevelLockTest_8cpp__incl.map  LevelLockTest_8cpp__incl.md5  LevelServoTest_8cpp.html  LevelServoTest_8cpp__incl.map  LevelServoTest_8cpp__incl.md5  LiftArrowTest_8cpp.html  LiftArrowTest_8cpp__incl.map  LiftArrowTest_8cpp__incl.md5  LiftServoTest_8cpp.html  LiftServoTest_8cpp__incl.map  LiftServoTest_8cpp__incl.md5  Log_8h.html  Log_8h__dep__incl.map  Log_8h__dep__incl.md5  Log_8h__incl.map  Log_8h__incl.md5  Log_8h_source.html  NacelleLockTest_8cpp.html  NacelleLockTest_8cpp__incl.map  NacelleLockTest_8cpp__incl.md5  PacketReceiver_8h.html  PacketReceiver_8h__dep__incl.map  PacketReceiver_8h__dep__incl.md5  PacketReceiver_8h__incl.map  PacketReceiver_8h__incl.md5  PacketReceiver_8h_source.html  PacketTest_8cpp.html  PacketTest_8cpp__incl.map  PacketTest_8cpp__incl.md5  RCBArrowTest_8cpp.html  RCBArrowTest_8cpp__incl.map  RCBArrowTest_8cpp__incl.md5  Root_8h.html  Root_8h__dep__incl.map  Root_8h__dep__incl.md5  Root_8h__incl.map  Root_8h__incl.md5  Root_8h_source.html  SerialObject_8h.html  (+408 more)
latex/: LevelLockTest_8cpp.tex  LevelLockTest_8cpp__incl.md5  LevelServoTest_8cpp.tex  LevelServoTest_8cpp__incl.md5  LiftArrowTest_8cpp.tex  LiftArrowTest_8cpp__incl.md5  Log_8h.tex  (+181 more)
(+574 files in other folders)
